# mail-cli

./: Cargo.toml  README.md
src/: config.rs  imap_client.rs  main.rs  models.rs  smtp_client.rs  ui.rs
