[package]
name = "mail-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mail"
path = "src/main.rs"

[dependencies]
imap = { version = "2", default-features = false, features = ["tls"] }
native-tls = "0.2"
lettre = { version = "0.11", default-features = false, features = ["native-tls", "smtp-transport", "builder"] }
mailparse = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
